Refactor Pokedex project structure and components; add routing and layout enhancements

--- a/projet2-Pokedex/projet-Pokedex/tsconfig.json
+++ b/projet2-Pokedex/projet-Pokedex/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "compilerOptions": {
-    "incremental": true,
-    "tsBuildInfoFile": "./node_modules/.cache/tsbuildinfo",
-    "jsx": "react-jsx",  
-  }
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ]
 }
