--- a/projet2-Pokedex/projet-Pokedex/package.json
+++ b/projet2-Pokedex/projet-Pokedex/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
