--- a/projet2-Pokedex/projet-Pokedex/tsconfig.app.json
+++ b/projet2-Pokedex/projet-Pokedex/tsconfig.app.json
@@ -1,10 +1,20 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["*"],
+      "@layout/*": ["layout/*"],
+      "@pages/*": ["pages/*"],
+      "@components/*": ["components/*"],
+      "@types/*": ["types/*"],
+      "@pokemon/*": ["modules/pokemon/*"]
+    },
+
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "incremental": true,
-    "target": "ES2022",
+    "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -23,5 +33,5 @@
     "noFallthroughCasesInSwitch": true,
     /*"noUncheckedSideEffectImports": true  "erasableSyntaxOnly": true,*/
   },
-  "include": ["src"]
+  "include": ["src"],
 }
